--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
   padding: 0;
   margin: 0;
   text-align: center;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
