tranasction page chagnes

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -29,10 +29,10 @@
     font-weight: 500 !important;
     background-color: #EEE5FF !important;
 }
-svg{
+/* svg{
     width: 32px !important;
     height: 32px !important;
-}
+} */
 
 
 
